<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>dz.elit</groupId>
    <artifactId>pay-tracker</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>pay-tracker</name>
    <description>payment action and payment auxiliary accounting tracker</description>
    <!-- points to the project's homepage, documentation, or main repository.-->
    <url>https://github.com/khadidjaAiss/pay-tracker/</url>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer>
            <name>Aissani Khadidja</name>
            <email>aissani.khadija@sonelgaz-serv.dz</email>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git@github.com:khadidjaAiss/pay-tracker.git</connection>
        <developerConnection>scm:git:git@github.com:khadidjaAiss/pay-tracker.git</developerConnection>
        <tag>0.0.1-SNAPSHOT</tag>
        <url>https://github.com/khadidjaAiss/pay-tracker</url>
    </scm>
    <properties>
        <java.version>21</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>postgresql</id>-->
<!--            <properties>-->
<!--                <database.type>postgresql</database.type>-->
<!--            </properties>-->
<!--            <dependencies>-->
<!--                <dependency>-->
<!--                    <groupId>org.springframework.boot</groupId>-->
<!--                    <artifactId>spring-boot-starter-data-jpa</artifactId>-->
<!--                </dependency>-->
<!--                <dependency>-->
<!--                    <groupId>org.postgresql</groupId>-->
<!--                    <artifactId>postgresql</artifactId>-->
<!--                    <scope>runtime</scope>-->
<!--                </dependency>-->
<!--            </dependencies>-->
<!--        </profile>-->
<!--        <profile>-->
<!--            <id>mongodb</id>-->
<!--            <properties>-->
<!--                <database.type>mongodb</database.type>-->
<!--            </properties>-->
<!--            <dependencies>-->
<!--                <dependency>-->
<!--                    <groupId>org.springframework.boot</groupId>-->
<!--                    <artifactId>spring-boot-starter-data-mongodb</artifactId>-->
<!--                </dependency>-->
<!--            </dependencies>-->
<!--        </profile>-->
<!--    </profiles>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
